Se configuro https en Swagger
